# miraviewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  icon.rc
headers/: Camera.h  Mesh.h  ShaderProgram.h  Texture2D.h
src/: Camera.cpp  Mesh.cpp  ShaderProgram.cpp  Texture2D.cpp  main.cpp
